--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<h1>Shopping List</h1>
 	<h2> This is the background</h2>
+	<p>this is better</p>
 	<p id="first">Get it done today</p>
 	<input id="userinput" type="text" placeholder="enter items">
 	<button id="enter">Enter</button>
